logs/jvm/t7006-jvm.log
Test.scala:10: error: type mismatch;
 found   : org.objectweb.asm.tree.InsnList
 required: scala.tools.asm.tree.InsnList
    assert(count(methodNode.instructions, asm.Opcodes.NOP) == 0)
                            ^
Test.scala:11: error: type mismatch;
 found   : org.objectweb.asm.tree.InsnList
 required: scala.tools.asm.tree.InsnList
    assert(count(methodNode.instructions, asm.Opcodes.GOTO) == 1)
                            ^
two errors found
